# arkydb

./: Cargo.toml  schema.json
arky/: Cargo.toml
arky/src/: core.rs  db.rs  edge.rs  entity.rs  inst.rs  lib.rs  node.rs  query.rs  storage.rs
arky/src/storages/: rocksdb.rs
arky/tests/: db.rs  edge.rs  node.rs
core/: Cargo.toml
core/src/: data.rs  id.rs  lib.rs  types.rs  utils.rs
macros/schema/: Cargo.toml
macros/schema/src/: lib.rs
macros/schema/tests/: lib.rs
