[package]
name = "arky"
publish = true
version = { workspace = true }
edition = { workspace = true }

[dependencies]
arkycore = { path = "../core" }
arkymacros_schema = { path = "../macros/schema" }
async-trait = "0.1.68"
bincode = "1.3.3"
rocksdb = "0.20.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.0.0", features = ["full"] }

[dev-dependencies]
tempdir = "0.3.7"

[lib]
name = "arky"
