[package]
name = "arkycore"
publish = false
version = { workspace = true }
edition = { workspace = true }

[dependencies]
downcast = "0.11.0"
dyn_partial_eq = "0.1.2"
dyn-clone = "1.0.11"
serde = { version = "1.0", features = ["derive"] }
snowflaked = { version = "1.0.0", features = ["sync"] }
bincode = "1.3.3"
